# MIPS_SIMULATOR

./: CMakeLists.txt  README.md  image.txt  memory_image2.txt
include/: .tools.h.swp  VariadicTable.h~  const.h  const.h~  instruction_fetch.h  pipeline.h~  tools.h
src/: .clang-format  .main.c.swp  .tools.c.swp  ID. c  IF.c  execute.c  instruction_decode.c  instruction_fetch.c  main.c  pipeline.c  tools.c
src/includes/: IF.h  MEM.h
tmp/: EX.c  EX.h  ID.h  MEM.c  common.c  operations.c  pipeline.c  pipeline.h
